--- a/css/normalize.css
+++ b/css/normalize.css
@@ -422,3 +422,6 @@ td,
 th {
   padding: 0;
 }
+
+.clearfix:after{content:".";display:block;height:0;clear:both;visibility:hidden}
+.clearfix{*+height:1%;}
